# py24so

./: .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  format.yml  publish-to-pypi.yml
examples/: basic_usage.py
py24so/: __init__.py
py24so/core/: __init__.py  auth.py  batch.py  client.py  exceptions.py  rate_limiter.py
py24so/endpoints/: __init__.py  customers.py  invoices.py  product_categories.py  products.py
py24so/models/: __init__.py  config.py  customer.py  invoice.py  product.py  product_category.py
scripts/: dev_commands.py  format_code.py  uv_setup.py
tests/integration/: test_invoice_integration.py  test_product_category_integration.py  test_product_integration.py
tests/unit/: test_async_invoice_endpoint.py  test_async_product_category_endpoint.py  test_async_product_endpoint.py  test_invoice_endpoint.py  test_product_category_endpoint.py  test_product_endpoint.py  test_rate_limiter.py
